Edit some chart data

--- a/WebApplication1/Views/Admin/CustomerManager.cshtml
+++ b/WebApplication1/Views/Admin/CustomerManager.cshtml
@@ -74,11 +74,14 @@
                                             <td>Khách hàng</td>
                                             break;
                                     }
-                                    <td>
-                                        <button class="btn btn-outline-success btn-edit-acc" data-id="#AccModal-@acc.Id">
-                                            <i class="fa fa-edit"></i> Detail
-                                        </button>
-                                    </td>
+                                <td>
+                                    <button class="btn btn-outline-success btn-edit-acc" data-id="#AccModal-@acc.Id">
+                                        <i class="fa fa-edit"></i> Detail
+                                    </button>
+                                    <button class="btn btn-outline-danger btn-remove-acc" data-id="@acc.Id">
+                                        <i class="fa fa-remove"></i> Remove
+                                    </button>
+                                </td>
                                 </tr>
                                 }
 
