--- a/WebApplication1/Views/Admin/ProductManager.cshtml
+++ b/WebApplication1/Views/Admin/ProductManager.cshtml
@@ -115,7 +115,7 @@
                             </div>
                             <div class="col-md-6">
                                 <span>Mô tả: </span><br>
-                                <input class="form-control" name="mota" value="@item.Mota" required><br />
+                                <textarea name="mota" id="textarea-input" rows="9" placeholder="Nội dung" class="form-control">@item.Mota</textarea><br />
                             </div>
                             
                         </div>
