--- a/WebApplication1/Views/KhachHang/Index.cshtml
+++ b/WebApplication1/Views/KhachHang/Index.cshtml
@@ -29,6 +29,6 @@
             <input type="text" class="form-control" id="Sdt" name="Sodt" value="@kh.Sodt" autocomplete="off" required>
         </div>
     </div>
-    <input type="submit" class="btn-submit" value="&nbsp; Cập nhật">
+    <input type="submit" class="btn-submit btn btn-outline-success" value="&nbsp; Cập nhật">
     <i class="far fa-pencil-alt icon"></i>
 </form>
