--- a/WebApplication1/Views/Admin/Chart/OrderChart.cshtml
+++ b/WebApplication1/Views/Admin/Chart/OrderChart.cshtml
@@ -28,7 +28,7 @@
                     <div class="col-lg-6">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="mb-3">Sơ đồ thống kê doanh thu </h4>
+                                <h4 class="mb-3">Sơ đồ thống kê doanh thu theo tháng trong năm 2020</h4>
                                 <canvas id="team-chart"></canvas>
                             </div>
                         </div>
@@ -36,7 +36,7 @@
                     <div class="col-lg-6">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="mb-3">Sơ đồ thống kê số lượt đặt hàng </h4>
+                                <h4 class="mb-3">Sơ đồ thống kê số lượt đặt hàng theo tháng trong năm 2020</h4>
                                 <canvas id="count-chart"></canvas>
                             </div>
                         </div>
