--- a/WebApplication1/Views/Shared/_AdminLayout.cshtml
+++ b/WebApplication1/Views/Shared/_AdminLayout.cshtml
@@ -59,10 +59,6 @@
 
             <div id="main-menu" class="main-menu collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a asp-action="Index" asp-controller="Admin"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
-                    </li>
-
                     <h3 class="menu-title">Quản lý đơn hàng</h3><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
                         <a href="../#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Đơn hàng</a>
@@ -71,20 +67,13 @@
                             <li><i class="fa fa-table"></i><a asp-action="OrderManager" asp-controller="Admin">Thêm, xóa, sửa</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item-has-children dropdown">
-                        <a href="../#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Đơn hàng đã hoàn thành</a>
-                        <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-table"></i><a href="../tables-basic.html">Biểu đồ thống kê</a></li>
-                            <li><i class="fa fa-table"></i><a href="../tables-data.html">Thêm, xóa, sửa</a></li>
-                        </ul>
-                    </li>
 
                     <h3 class="menu-title">Quản lý sản phẩm</h3><!-- /.menu-title -->
                     <!--Quản lý sản phẩm thêm xóa sửa-->
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Sản phẩm</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-table"></i><a href="../tables-data.html">Biểu đồ thống kê</a></li>
+                            <li><i class="fa fa-table"></i><a asp-action="ChartAtProduct" asp-controller="Admin">Biểu đồ thống kê</a></li>
                             <li><i class="fa fa-table"></i><a asp-action="ProductManager" asp-controller="Admin">Thêm, xóa, sửa</a></li>
                         </ul>
                     </li>
@@ -97,16 +86,6 @@
                             <li><i class="fa fa-table"></i><a asp-action="CustomerManager" asp-controller="Admin">Thêm, xóa, sửa</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item-has-children dropdown">
-                        <a href="../#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Tài khoản</a>
-                        <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-table"></i><a href="../tables-basic.html">Biểu đồ thống kê</a></li>
-                            <li><i class="fa fa-table"></i><a asp-action="AccountManager" asp-controller="Admin">Thêm, xóa, sửa</a></li>
-                        </ul>
-                    </li>
-
-
-
 
                     <h3 class="menu-title">Extras</h3><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
@@ -286,6 +265,7 @@
 
     <script src="../vendors/chart.js/dist/Chart.bundle.min.js"></script>
     <script src="../assets/js/init-scripts/chart-js/chartjs-init.js"></script>
+    <script src="../assets/js/init-scripts/chart-js/productchart.js"></script>
     <script>
         (function ($) {
             "use strict";
