fix status of ordêr

--- a/WebApplication1/Views/Admin/OrderDetail.cshtml
+++ b/WebApplication1/Views/Admin/OrderDetail.cshtml
@@ -179,12 +179,13 @@
                         </div>
                         <div class="col-md-6">
                             <span>Tình trạng: </span><br>
-                            <select name="tt" class="form-control">
-                                <option value="1">Đã hoàn thành</option>
-                                <option value="0">Đang xử lý</option>
-                                <option value="2">Đang chuẩn bị</option>
-                                <option value="3">Đang giao hàng</option>
-                            </select><br />
+                                <select name="tt" class="form-control">
+                                    <option value="1">Đã hoàn thành</option>
+                                    <option value="0">Đang xử lý</option>
+                                    <option value="2">Đang chuẩn bị</option>
+                                    <option value="3">Đang giao hàng</option>
+                                    <option value="4">Đã hủy</option>
+                                </select><br />
                         </div>
                     </div>
                 </div>
