--- a/WebApplication1/Views/Admin/OrderManager.cshtml
+++ b/WebApplication1/Views/Admin/OrderManager.cshtml
@@ -73,6 +73,7 @@
                                             break;
                                         default:
                                             <td><button class="btn btn-danger">Đang xử lý</button></td>
+                                            break;
                                     }
                                     <td>
                                         <form asp-controller="Admin" asp-action="OrderDetail" asp-route-id="@od.Madh" method="post">
