--- a/WebApplication1/Views/KhachHang/DonHang.cshtml
+++ b/WebApplication1/Views/KhachHang/DonHang.cshtml
@@ -33,7 +33,8 @@
                     {
                         case 0:
                             <td><span class="badge badge-dark">Đã hủy</span></td>
-                        case 1:
+                                break;
+                            case 1:
                             <td><span class="badge badge-success">Đã thanh toán</span></td>
                             break;
                         case 2:
