--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -331,4 +331,27 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="NoProductModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Thông báo</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                Món đã hết, vui lòng đặt món khác.
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer row">
+                <button type="button" class="btn btn-secondary col-sm-3" data-dismiss="modal">Đóng</button>
+            </div>
+
+        </div>
+    </div>
+</div>
 
